# swing_leg_trajectory

./: CMakeLists.txt  README.md  ViaPoint.cpp  ViaPoint.h  main.cpp
Spline/: CMakeLists.txt  Spline.cpp
